client/src/components/mobileFilter.css
.mobileFilter{
    width: 100%;
    height: 60px;
    background-color: #000000;
    color: white;
    display: none;
    border: none;
    position: sticky;
    top: 70px;
    z-index: 6;



    
}

#filterText{
    font-size: 24px;
    font-weight: 900;
    text-align: center;
    padding: 14px 0;

}

.mobile-filter-toggle{
    display: none;
}

@media screen and (max-width: 650px){

    .mobileFilter{
        display: block;
       

    }

    
}

